<resources>
    <string name="app_name">App学习</string>
    <string name="action_settings">Settings</string>

    <string name="listtest">ListView Test</string>
    <string name="colortest">Color Test</string>
    <string name="inputtext">Input Test</string>
    <string name="volleytest">Volley Test</string>
    <string name="circleimage">Circle Image</string>
    <string name="userinfo">User Info</string>
    <string name="Zxing">Zxing test</string>
    <string name="Downloadmanager">Download Manager</string>
    <string name="RegisterLayout">Register Layout</string>
    <string name="SqliteTest">Sqlite Test</string>
    <string name="UltralPtr">Ultra Pull To Refresh</string>
    <string name="Drawerlayout">Drawer Layout Test</string>
    <string name="Toolbar">ActionBar Test</string>
    <string name="Bottom">Bottom Toolbar</string>
    <string name="RedActionbar">Red ActionBar</string>
    <string name="VersionUpdate">Version Update</string>
    <string name="Banner">Banner learn</string>
    <string name="Star">Star Test</string>
    <string name="ProgressDialog">Progress Dialog</string>
    <string name="Loading">Loading meituan</string>
    <string name="Animation">Animation 动画</string>
    <string name="Corner">圆角</string>

    <string name="scan_text">Scan Test</string>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="app_not_available">App not available</string>

    <string name="bottom_home">首页</string>
    <string name="bottom_layalty">活动</string>
    <string name="bottom_page">分类</string>
    <string name="bottom_shopping">购物车</string>
    <string name="bottom_person">我的</string>

    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
</resources>
