<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:background="#FFFFFF"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/re_weixin"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:onClick="onTabClicked"
        android:padding="3dp">
        <ImageView
            android:id="@+id/ib_weixin"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_centerHorizontal="true"
            android:focusable="false"
            android:scaleType="centerInside"
            android:src="@mipmap/ic_home_white_36dp" />
        <TextView
            android:id="@+id/tv_weixin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ib_weixin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="3dp"
            android:text="@string/bottom_home"
            android:textColor="#9A9A9A"
            android:textSize="10sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/re_weixin1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:onClick="onTabClicked"
        android:padding="3dp">
        <ImageView
            android:id="@+id/ib_weixin1"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_centerHorizontal="true"
            android:focusable="false"
            android:scaleType="centerInside"
            android:src="@mipmap/ic_loyalty_white_36dp" />
        <TextView
            android:id="@+id/tv_weixin1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ib_weixin1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="3dp"
            android:text="@string/bottom_layalty"
            android:textColor="#9A9A9A"
            android:textSize="10sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/re_weixin2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:onClick="onTabClicked"
        android:padding="3dp">
        <ImageView
            android:id="@+id/ib_weixin2"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_centerHorizontal="true"
            android:focusable="false"
            android:scaleType="centerInside"
            android:src="@mipmap/ic_pages_white_36dp" />
        <TextView
            android:id="@+id/tv_weixin2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ib_weixin2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="3dp"
            android:text="@string/bottom_page"
            android:textColor="#9A9A9A"
            android:textSize="10sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/re_weixin3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:onClick="onTabClicked"
        android:padding="3dp">
        <ImageView
            android:id="@+id/ib_weixin3"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_centerHorizontal="true"
            android:focusable="false"
            android:scaleType="centerInside"
            android:src="@mipmap/ic_shopping_cart_white_36dp" />
        <TextView
            android:id="@+id/tv_weixin3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ib_weixin3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="3dp"
            android:text="@string/bottom_shopping"
            android:textColor="#9A9A9A"
            android:textSize="10sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/re_weixin4"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:onClick="onTabClicked"
        android:padding="3dp">
        <ImageView
            android:id="@+id/ib_weixin4"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_centerHorizontal="true"
            android:focusable="false"
            android:scaleType="centerInside"
            android:src="@mipmap/ic_person_outline_white_36dp" />
        <TextView
            android:id="@+id/tv_weixin4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ib_weixin4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="3dp"
            android:text="@string/bottom_person"
            android:textColor="#9A9A9A"
            android:textSize="10sp" />
    </RelativeLayout>
</LinearLayout>
